--- a/MS/css/layout.css
+++ b/MS/css/layout.css
@@ -103,7 +103,8 @@ header {
    position: relative;
    height: 800px;
    min-height: 500px;
-   width: 100%;
+   max-width: 100%;
+   max-height: 100%;
    background: #161415 url(../images/header-background4.jpg) no-repeat top center;
    background-size: cover !important;
    -webkit-background-size: cover !important;
@@ -117,18 +118,21 @@ header:before {
    content: '';
    display: inline-block;
    vertical-align: middle;
-   height: 60%;
+   height: 30%;
 }
 header .banner {
    display: inline-block;
    vertical-align: middle;
    margin: 0 auto;
    width: 85%;
-   padding-bottom: 30px;s
+   padding-bottom: 30px;
    text-align: center;
 }
 
-header .banner-text { width: 100%; }
+header .banner-text { width: 100%; 
+position: absolute;
+font-size: 5vw;
+}
 header .banner-text h1 {
    margin: 0 !important;
    text-align: left!important;
@@ -145,7 +149,7 @@ header .banner-text h2 {
    font: 50px/1.4em 'librebaskerville-bold', serif;
    color: #D1E8E2;
    margin: 0 auto;
-   width: 70%;
+   max-width: 34%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 header .banner-text h2 span,
@@ -1264,6 +1268,8 @@ body1 {
   overflow: hidden;
   width: 820px;
   height: 350px;
+  max-width: 100%;
+  max-height: 100%;
   background:  #0a192f;
   box-shadow: 5px 5px 15px rgba(#4E4E4E, .5);
   border-radius: 0px;
@@ -1536,8 +1542,23 @@ button1 {
    box-shadow: 0 8px 6px -6px black;
  }
 
+ .hover08 figure img {
+	-webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.hover08 figure:hover img {
+	-webkit-filter: grayscale(0);
+	filter: grayscale(0);
+}
 
- 
+.cardItem:hover {
+   margin-top: 92px;
+   cursor: pointer;
+   box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.2);
+   transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+
 footer1 {
   position: absolute;
   bottom: 0;
