--- a/MS/css/layout.css
+++ b/MS/css/layout.css
@@ -105,7 +105,8 @@ header {
    min-height: 500px;
    max-width: 100%;
    max-height: 100%;
-   background: #161415 url(../images/header-background6.jpg) no-repeat top center;
+   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+	       url(../images/header-background6.jpg) no-repeat top center;
    background-size: cover !important;
    -webkit-background-size: cover !important;
    background-attachment: fixed;
