--- a/MS/css/layout.css
+++ b/MS/css/layout.css
@@ -337,7 +337,7 @@ header .scrolldown a:hover { color: #11ABB0; }
       background-color: transparent;
    }
    100% {
-      background-color: #FFCB9A;
+      background-color: #1a1a1a;
    }
 }
 
