--- a/MS/css/layout.css
+++ b/MS/css/layout.css
@@ -176,7 +176,7 @@ header .banner-text h4 {
    margin: 0 !important;
    text-align: left!important;
    font: 16px/1.4em 'librebaskerville-bold', serif;
-   color: #D1E8E2;
+   color: ##11abb0;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
@@ -326,7 +326,7 @@ header .scrolldown a:hover { color: #11ABB0; }
  }
 
 .highlight {
-   background-color: #1a1a1a; /* Light yellow */
+   background-color: #FFCB9A; /* Light yellow */
    padding: 0 4px;
    border-radius: 3px;
    animation: highlightFadeIn 2s ease-in-out;
@@ -337,7 +337,7 @@ header .scrolldown a:hover { color: #11ABB0; }
       background-color: transparent;
    }
    100% {
-      background-color: #1a1a1a;
+      background-color: #FFCB9A;
    }
 }
 
