--- a/MS/css/layout.css
+++ b/MS/css/layout.css
@@ -176,7 +176,7 @@ header .banner-text h4 {
    margin: 0 !important;
    text-align: left!important;
    font: 16px/1.4em 'librebaskerville-bold', serif;
-   color: #11abb0;
+   color: #28282B;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
